--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,15 @@ dependencies:
   flutter_bloc: ^8.1.6
   get_it: ^8.0.1
   go_router: ^14.3.0
-  json_serializable: ^6.8.0
   dio: ^5.7.0
   sqflite: ^2.4.0
   path_provider: ^2.1.4
   json_annotation: ^4.9.0
   path: ^1.9.0
   shared_preferences: ^2.3.2
+  dartz: ^0.10.1
+  logger: ^2.4.0
+  intl_phone_number_input: ^0.7.4
 
 dev_dependencies:
   flutter_test:
@@ -54,6 +56,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
   build_runner: ^2.4.13
+  json_serializable: ^6.8.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
