--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   dartz: ^0.10.1
   logger: ^2.4.0
   intl_phone_number_input: ^0.7.4
+  pinput: ^5.0.0
+  smart_auth: ^2.0.0
+  timer_count_down: ^2.2.2
 
 dev_dependencies:
   flutter_test:
